Responsive for smartphone

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="mobile.css" rel="stylesheet" type="text/css" media="screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait) " />
+    <link href="mobile.css" rel="stylesheet" type="text/css" media="only screen and (max-device-width : 480px)" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   
