--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="mobile.css" rel="stylesheet" type="text/css" media="only screen and (max-device-width : 480px)" />
+    <link href="mobile.css" rel="stylesheet" type="text/css" media="screen and (max-device-width : 480px)" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	  <title>Selajdin Bilali</title>
   </head>
   
   <body>
@@ -80,7 +82,7 @@
 	<li><b>Travail de Bachelor</b> : Déploiment automatique de conteneurs dans un cluster avec Docker et Kubernetes</li>
 	<li><b>Sandstorm</b> : Paquetage de l'application Jirapheau pour la plateforme Sandstorm</li>
 	<li><b>Snake Multijoueur</b> : Implémentation d'un protocole réseau en python pour le jeu du Snake en multijoueur</li>
-	<li><b>Personal OS</b> : Création d'un kernel x86</br>
+	<li><b>Personal OS</b> : Création d'un kernel x86<br/>
 	  avec C et Assembleur</li>
       </ul>
     </div>
