--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="mobile.css" rel="stylesheet" type="text/css" media="screen and (device-width : 480px)" />
+    <link href="mobile.css" rel="stylesheet" type="text/css" media="screen and (max-width : 480px)" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	  <title>Selajdin Bilali</title>
   </head>
