--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel='icon' href='data:;base64,iVBORw0KGgo='>
     <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
     <link href="mobile.css" rel="stylesheet" type="text/css" media="screen and (max-width : 480px)" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
