buttons for mobile links

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <h1>Projets</h1>
                 <ul>
 	            <li><strong>Travail de Bachelor</strong> : Déploiment automatique de <em>conteneurs</em> dans un cluster avec <a href="https://www.docker.com/">Docker</a> et <a href="http://www.kubernetes.io">Kubernetes</a></li>
-	            <li><strong>Sandstorm</strong> : Paquetage de l'application <a href="http://jirafeau.net/">Jirapheau</a> pour la plateforme <a href="https://sandstorm.io/">Sandstorm</a></li>
+	            <li><strong>Sandstorm</strong> : Paquetage de l'application <a href="http://jirafeau.net/">Jirafeau</a> pour la plateforme <a href="https://sandstorm.io/">Sandstorm</a></li>
 	            <li><b>Snake Multijoueur</b> : Implémentation d'un protocole réseau en python pour le jeu du Snake en multijoueur</li>
 	            <li><b>Personal OS</b> : Création d'un kernel x86<br/>
 	  avec C et Assembleur</li>
