--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <div class="wrapper">
             <div class="site-header">
 	        <!-- <img src="http://lorempixel.com/200/200/" alt="portrait" /> -->
+
 	        <img src="rsz_moi2.jpg" alt="portrait" />
 	        
 	        <section class="row">
+                    <a class="portfolio" href="http://vps209452.ovh.net/portfolio">Visiter mon portfolio</a>
 	            <h1>Selajdin Bilali</h1>
 	            <h2>Ingénieur en Technologies de l'Information</h2>
 	            <h2>Développeur Logiciel & Web</h2>
