--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	        <h3> A <a href="http://www.prezenz.com/">prezenz</a> Genève <i>Mars-Avril 2017</i></h3>
             <ul>
               <li>Intégration de maquettes en HTML et CSS</li>
-              <li>Intégration d'un module en Javascript/Jquery avec communication dans la base de données.</li>
+              <li>Intégration d'un module en Javascript/Jquery avec communication dans la base de données</li>
               <li>Ajout de contenu à travers le CMS interne</li>
             </ul>
             </section>
@@ -76,18 +76,19 @@
 	        <div class="gauche slide-left">
 	            <h2>Web</h2>
 	            <ul>
-	                <li>HTML5 et CSS3</li>
-	                <li>PHP/Python et MySQL/PostgreSQL</li>
-	                <li>Javacsript avec Jquery/Node.js</li>
+	              <li>HTML5 / CSS3 / Javascript</li>
+                  <li>Jquery / VueJS / Bootstrap / Gulp / Webpack / node / MongoDB</li>
+	              <li>PHP / Laravel</li>
+ 	              <li>MySQL / MariaDB / PostgreSQL</li>
 	            </ul>
 	        </div>
 	        <div class="droite slide-right">
 	            <h2>Programmation</h2>
 	            <ul>
 	                <li>Java et Scala</li>
-	                <li>C/C++</li>
-	                <li>Octave/Matlab</li>
-	                <li>Ada, R, Bash</li>
+	                <li>C / C++ / C#</li>
+	                <li>Octave / Matlab</li>
+	                <li>Ada / R / Bash</li>
 	            </ul>
 	        </div>
             </section>
@@ -139,14 +140,14 @@
             <section class="row loisirs">
                 <h1>Loisirs</h1>
                 <ul>
-	            <li>Cinéma</li>
-	            <li>Vélo / Jogging</li>
-	            <li>Nouvelles Technologies</li>
+	            <li>Cinéma / Lecture / Tv Shows</li>
+	            <li>Powerlifting</li>
+	            <li>Photographie</li>
                 </ul>
             </section>
 
             <footer class="row">
-              &copy Selajdin Bilali | 2016
+              &copy Selajdin Bilali | 2017
             </footer>
             
         </div>
