update designa and content

--- a/indexfr.html
+++ b/indexfr.html
@@ -20,19 +20,20 @@
         <img class="head__img" src="./rsz_moi2.jpg" alt="" />
         <h1 class="head__title">Selajdin Bilali</h1>
         <div class="head__subtitle-container">
-          <h2 class="head__subtitle">Full Stack Engineer</h2>
+          <h2 class="head__subtitle">Développeur Full Stack Logiciel & Web</h2>
           <p class="lang">
-            <a class="active" href="./index.html">EN</a> |
-            <a href="./indexfr.html">FR</a>
+            <a href="./index.html">EN</a> |
+            <a class="active" href="./indexfr.html">FR</a>
           </p>
         </div>
-        <h3 class="head__location">Geneva - Switzerland</h3>
-        <h4>Contact me :</h4>
+
+        <h3 class="head__location">Genève - Suisse</h3>
+        <h4>Contactez-moi :</h4>
         <ul class="head__list">
-          <li><a href="mailto:selajdin.bilali@gmail.com">By Email</a></li>
+          <li><a href="mailto:selajdin.bilali@gmail.com">par Email</a></li>
           <li>
             <a href="https://www.linkedin.com/in/selajdinbilali/"
-              >By Linkedin</a
+              >par Linkedin</a
             >
           </li>
         </ul>
@@ -40,28 +41,31 @@
     </div>
 
     <div class="about">
-      <h2 class="about__title">About</h2>
+      <h2 class="about__title">A propos de moi</h2>
       <p class="about__desc">
-        I am always ready for new challenges to show my skills and my passion.
+        Je suis toujours prvet pour de nouveaux défis afin de montrer mes
+        compétences et ma passion.
       </p>
     </div>
 
     <div class="xp">
-      <h2 class="xp__section__title">Experience</h2>
+      <h2 class="xp__section__title">Expérience</h2>
       <div class="xp__item">
         <img src="./homenhancement-logo.png" alt="" class="xp__logo" />
         <div class="xp__desc">
-          <h2 class="xp__title">Full Stack Engineer</h2>
+          <h2 class="xp__title">Ingénieur Full Stack</h2>
           <h3 class="xp__company">Homenhancement</h3>
-          <h4 class="xp__dates">May 2019 - Present</h4>
-          <h4 class="xp__location">Geneva, Switzerland</h4>
+          <h4 class="xp__dates">Mai 2019 - Aujourd'hui</h4>
+          <h4 class="xp__location">Genève, Suisse</h4>
           <ul class="xp__tasks">
-            <li class="xp__task">Design and development of the website</li>
+            <li class="xp__task">Design et développement du site web</li>
             <li class="xp__task">
-              Integration and connection with multiple APIs
+              Intégration et connection avec de multiples APIs
             </li>
-            <li class="xp__task">SEO and optimization of performance</li>
-            <li class="xp__task">Automation of different tasks with scripts</li>
+            <li class="xp__task">Optimisation et performance pour le SEO</li>
+            <li class="xp__task">
+              Automatisation de multiples tâches à l'aide de scripts
+            </li>
           </ul>
         </div>
       </div>
@@ -69,21 +73,21 @@
       <div class="xp__item">
         <img src="./ebu-logo.png" alt="" class="xp__logo" />
         <div class="xp__desc">
-          <h2 class="xp__title">Web & Game Developer</h2>
+          <h2 class="xp__title">Développeur web et de jeux vidéo</h2>
           <h3 class="xp__company">EBU</h3>
-          <h4 class="xp__dates">Jun 2017 - May 2018</h4>
-          <h4 class="xp__location">Geneva, Switzerland</h4>
+          <h4 class="xp__dates">Juin 2017 - Mai 2018</h4>
+          <h4 class="xp__location">Genève, Suisse</h4>
           <ul class="xp__tasks">
             <li class="xp__task">
-              Design and development of a web dashboard connected to an external
-              API
+              Développement et design d'un dashboard web à l'aide d'une API
+              externe
             </li>
             <li class="xp__task">
-              Design and development of VR and AR games for Iphone, Android and
-              Hololens
+              Développement et design de jeux vidéo AR/VR pour Iphone, Android
+              et Hololens
             </li>
             <li class="xp__task">
-              Unity with multiple AR/VR kit and plugins used
+              Utilisation d'unity avec de multiples Kit AR/VR
             </li>
           </ul>
         </div>
@@ -92,13 +96,13 @@
       <div class="xp__item">
         <img src="./prezenz-logo.png" alt="" class="xp__logo" />
         <div class="xp__desc">
-          <h2 class="xp__title">Web Developer</h2>
+          <h2 class="xp__title">Développeur web</h2>
           <h3 class="xp__company">Prezenz</h3>
-          <h4 class="xp__dates">Apr 2017 - May 2017</h4>
-          <h4 class="xp__location">Geneva, Switzerland</h4>
+          <h4 class="xp__dates">Avr 2017 - Mai 2017</h4>
+          <h4 class="xp__location">Genève, Suisse</h4>
           <ul class="xp__tasks">
             <li class="xp__task">
-              Development and maintenance of multiple websites.
+              Développement et maintenance de multiples sites web.
             </li>
           </ul>
         </div>
@@ -106,7 +110,7 @@
     </div>
 
     <div class="ed">
-      <h2 class="ed__section__title">Education</h2>
+      <h2 class="ed__section__title">Formation</h2>
       <div class="ed__item">
         <img src="./hes-logo.jpeg" alt="" class="ed__logo" />
         <div class="ed__desc">
@@ -122,18 +126,18 @@
     </div>
 
     <div class="langues">
-      <h2 class="skills__section__title">Languages</h2>
+      <h2 class="skills__section__title">Langues</h2>
       <div class="langues__grid">
-        <div class="skill">French C2</div>
-        <div class="skill">English B2</div>
-        <div class="skill">Spanish A1</div>
-        <div class="skill">German A1</div>
-        <div class="skill">Albanian C2</div>
+        <div class="skill">Français C2</div>
+        <div class="skill">Anglais B2</div>
+        <div class="skill">Espagnole A1</div>
+        <div class="skill">Allemand A1</div>
+        <div class="skill">Albanais C2</div>
       </div>
     </div>
 
     <div class="skills">
-      <h2 class="skills__section__title">Skills</h2>
+      <h2 class="skills__section__title">Compétences</h2>
       <div class="skills__grid">
         <div class="skill">HTML</div>
         <div class="skill">CSS</div>
