--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,7 +9,7 @@
     />
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
     <link href="style02.css" rel="stylesheet" type="text/css" media="screen" />
-    <title>Selajdin Bilali | Développeur Logiciel & Web</title>
+    <title>Full Stack Software and Web Developer | Selajdin Bilali</title>
   </head>
 
   <body>
