--- a/indexfr.html
+++ b/indexfr.html
@@ -43,7 +43,7 @@
     <div class="about">
       <h2 class="about__title">A propos de moi</h2>
       <p class="about__desc">
-        Je suis toujours prvet pour de nouveaux défis afin de montrer mes
+        Je suis toujours prêt pour de nouveaux défis afin de montrer mes
         compétences et ma passion.
       </p>
     </div>
