fix content and style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
       content="Développeur logiciel et web passioné d'informatique qui est capable de créer une application web, android, iphone, windows, mac et linux."
     />
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
-    <link href="style02.css" rel="stylesheet" type="text/css" media="screen" />
+    <link
+      href="style2021.css"
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+    />
     <title>Full Stack Software and Web Developer | Selajdin Bilali</title>
   </head>
 
