--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="head__topim"></div>
 
       <div class="head__desc">
-        <img class="head__img" src="./rsz_moi3.jpg" alt="" />
+        <img class="head__img" src="./rsz-moi3.jpg" alt="" />
         <h1 class="head__title">Selajdin Bilali</h1>
         <div class="head__subtitle-container">
           <h2 class="head__subtitle">Full Stack Engineer</h2>
