--- a/indexfr.html
+++ b/indexfr.html
@@ -22,7 +22,7 @@
       <div class="head__topim"></div>
 
       <div class="head__desc">
-        <img class="head__img" src="./rsz-moi3.jpg" alt="" />
+        <img class="head__img" src="./after3-square.jpeg" alt="" />
         <h1 class="head__title">Selajdin Bilali</h1>
         <div class="head__subtitle-container">
           <h2 class="head__subtitle">Développeur Full Stack Logiciel & Web</h2>
